@@ -19,6 +19,9 @@
    - deraadt@cvs.openbsd.org 2002/07/06 01:00:49
      [log.c]
      KNF
+   - deraadt@cvs.openbsd.org 2002/07/06 01:01:26
+     [ssh-keyscan.c]
+     KNF, realloc fix, and clean usage
 
 20020705
  - (tim) [configure.ac] AIX 4.2.1 has authenticate() in libs.
@@ -1302,4 +1305,4 @@
  - (stevesk) entropy.c: typo in debug message
  - (djm) ssh-keygen -i needs seeded RNG; report from markus@
 
-$Id: ChangeLog,v 1.2345 2002/07/07 22:14:55 mouring Exp $
+$Id: ChangeLog,v 1.2346 2002/07/07 22:17:22 mouring Exp $
